// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`barStack > renders correctly size 0 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
      style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
    >
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.125rem_xxsmall__toi52u5j styles_justifyContent_normal_xxsmall__toi52u5v"
        style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
      >
        <label
          class="styles_default__17td3g90 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
        />
        <div
          class="styles__1s3oplf9"
        >
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 10.638297872340425%;"
          >
            <div
              aria-controls="tooltip-1"
              aria-describedby="tooltip-1"
              class="styles__w40vpo9"
              tabindex="0"
            >
              <div
                class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
                data-testid="content-1"
              >
                <span
                  class="styles__1s3oplf8 style__m4c9ow0 style_prominence_stronger__m4c9ow6 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_2__m4c9ow1c style_undefined_compound_66__m4c9ow34"
                  style="--whiteSpace__qabug41: nowrap;"
                >
                  Hello
                </span>
              </div>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 22.340425531914892%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-2"
            >
              <span
                class="styles__1s3oplf8 style__m4c9ow0 style_prominence_stronger__m4c9ow6 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_2__m4c9ow1c style_undefined_compound_66__m4c9ow34"
                style="--whiteSpace__qabug41: nowrap;"
              />
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 22.340425531914892%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-3"
            >
              <span
                class="styles__1s3oplf8 style__m4c9ow0 style_prominence_stronger__m4c9ow6 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_2__m4c9ow1c style_undefined_compound_66__m4c9ow34"
                style="--whiteSpace__qabug41: nowrap;"
              >
                Encore
              </span>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 22.340425531914892%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-4"
            >
              <span
                class="styles__1s3oplf8 style__m4c9ow0 style_prominence_stronger__m4c9ow6 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_2__m4c9ow1c style_undefined_compound_66__m4c9ow34"
                style="--whiteSpace__qabug41: nowrap;"
              >
                Next
              </span>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 22.340425531914892%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-5"
            >
              <span
                class="styles__1s3oplf8 style__m4c9ow0 style_prominence_stronger__m4c9ow6 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_2__m4c9ow1c style_undefined_compound_66__m4c9ow34"
                style="--whiteSpace__qabug41: nowrap;"
              >
                Bye bye
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`barStack > renders correctly size 1 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
      style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
    >
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.125rem_xxsmall__toi52u5j styles_justifyContent_normal_xxsmall__toi52u5v"
        style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
      >
        <label
          class="styles_default__17td3g90 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
        />
        <div
          class="styles__1s3oplf9"
        >
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 10.638297872340425%;"
          >
            <div
              aria-controls="tooltip-1"
              aria-describedby="tooltip-1"
              class="styles__w40vpo9"
              tabindex="0"
            >
              <div
                class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
                data-testid="content-1"
              >
                <span
                  class="styles__1s3oplf8 style__m4c9ow0 style_prominence_stronger__m4c9ow6 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_2__m4c9ow1c style_undefined_compound_66__m4c9ow34"
                  style="--whiteSpace__qabug41: nowrap;"
                >
                  Hello
                </span>
              </div>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 22.340425531914892%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-2"
            >
              <span
                class="styles__1s3oplf8 style__m4c9ow0 style_prominence_stronger__m4c9ow6 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_2__m4c9ow1c style_undefined_compound_66__m4c9ow34"
                style="--whiteSpace__qabug41: nowrap;"
              />
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 22.340425531914892%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-3"
            >
              <span
                class="styles__1s3oplf8 style__m4c9ow0 style_prominence_stronger__m4c9ow6 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_2__m4c9ow1c style_undefined_compound_66__m4c9ow34"
                style="--whiteSpace__qabug41: nowrap;"
              >
                Encore
              </span>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 22.340425531914892%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-4"
            >
              <span
                class="styles__1s3oplf8 style__m4c9ow0 style_prominence_stronger__m4c9ow6 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_2__m4c9ow1c style_undefined_compound_66__m4c9ow34"
                style="--whiteSpace__qabug41: nowrap;"
              >
                Next
              </span>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 22.340425531914892%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-5"
            >
              <span
                class="styles__1s3oplf8 style__m4c9ow0 style_prominence_stronger__m4c9ow6 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_2__m4c9ow1c style_undefined_compound_66__m4c9ow34"
                style="--whiteSpace__qabug41: nowrap;"
              >
                Bye bye
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`barStack > renders correctly size 2 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
      style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
    >
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.125rem_xxsmall__toi52u5j styles_justifyContent_normal_xxsmall__toi52u5v"
        style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
      >
        <label
          class="styles_default__17td3g90 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
        />
        <div
          class="styles__1s3oplf9"
        >
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 10.638297872340425%;"
          >
            <div
              aria-controls="tooltip-1"
              aria-describedby="tooltip-1"
              class="styles__w40vpo9"
              tabindex="0"
            >
              <div
                class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
                data-testid="content-1"
              >
                <span
                  class="styles__1s3oplf8 style__m4c9ow0 style_prominence_stronger__m4c9ow6 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_2__m4c9ow1c style_undefined_compound_66__m4c9ow34"
                  style="--whiteSpace__qabug41: nowrap;"
                >
                  Hello
                </span>
              </div>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 22.340425531914892%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-2"
            >
              <span
                class="styles__1s3oplf8 style__m4c9ow0 style_prominence_stronger__m4c9ow6 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_2__m4c9ow1c style_undefined_compound_66__m4c9ow34"
                style="--whiteSpace__qabug41: nowrap;"
              />
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 22.340425531914892%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-3"
            >
              <span
                class="styles__1s3oplf8 style__m4c9ow0 style_prominence_stronger__m4c9ow6 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_2__m4c9ow1c style_undefined_compound_66__m4c9ow34"
                style="--whiteSpace__qabug41: nowrap;"
              >
                Encore
              </span>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 22.340425531914892%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-4"
            >
              <span
                class="styles__1s3oplf8 style__m4c9ow0 style_prominence_stronger__m4c9ow6 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_2__m4c9ow1c style_undefined_compound_66__m4c9ow34"
                style="--whiteSpace__qabug41: nowrap;"
              >
                Next
              </span>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 22.340425531914892%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-5"
            >
              <span
                class="styles__1s3oplf8 style__m4c9ow0 style_prominence_stronger__m4c9ow6 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_2__m4c9ow1c style_undefined_compound_66__m4c9ow34"
                style="--whiteSpace__qabug41: nowrap;"
              >
                Bye bye
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`barStack > renders correctly size 3 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
      style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
    >
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.125rem_xxsmall__toi52u5j styles_justifyContent_normal_xxsmall__toi52u5v"
        style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
      >
        <label
          class="styles_default__17td3g90 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
        />
        <div
          class="styles__1s3oplf9"
        >
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 10.638297872340425%;"
          >
            <div
              aria-controls="tooltip-1"
              aria-describedby="tooltip-1"
              class="styles__w40vpo9"
              tabindex="0"
            >
              <div
                class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
                data-testid="content-1"
              >
                <span
                  class="styles__1s3oplf8 style__m4c9ow0 style_prominence_stronger__m4c9ow6 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_2__m4c9ow1c style_undefined_compound_66__m4c9ow34"
                  style="--whiteSpace__qabug41: nowrap;"
                >
                  Hello
                </span>
              </div>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 22.340425531914892%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-2"
            >
              <span
                class="styles__1s3oplf8 style__m4c9ow0 style_prominence_stronger__m4c9ow6 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_2__m4c9ow1c style_undefined_compound_66__m4c9ow34"
                style="--whiteSpace__qabug41: nowrap;"
              />
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 22.340425531914892%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-3"
            >
              <span
                class="styles__1s3oplf8 style__m4c9ow0 style_prominence_stronger__m4c9ow6 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_2__m4c9ow1c style_undefined_compound_66__m4c9ow34"
                style="--whiteSpace__qabug41: nowrap;"
              >
                Encore
              </span>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 22.340425531914892%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-4"
            >
              <span
                class="styles__1s3oplf8 style__m4c9ow0 style_prominence_stronger__m4c9ow6 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_2__m4c9ow1c style_undefined_compound_66__m4c9ow34"
                style="--whiteSpace__qabug41: nowrap;"
              >
                Next
              </span>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 22.340425531914892%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-5"
            >
              <span
                class="styles__1s3oplf8 style__m4c9ow0 style_prominence_stronger__m4c9ow6 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_2__m4c9ow1c style_undefined_compound_66__m4c9ow34"
                style="--whiteSpace__qabug41: nowrap;"
              >
                Bye bye
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`barStack > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
      style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
    >
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.125rem_xxsmall__toi52u5j styles_justifyContent_normal_xxsmall__toi52u5v"
        style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
      >
        <label
          class="styles_default__17td3g90 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
        />
        <div
          class="styles__1s3oplf9"
        >
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 10.638297872340425%;"
          >
            <div
              aria-controls="tooltip-1"
              aria-describedby="tooltip-1"
              class="styles__w40vpo9"
              tabindex="0"
            >
              <div
                class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
                data-testid="content-1"
              >
                <span
                  class="styles__1s3oplf8 style__m4c9ow0 style_prominence_stronger__m4c9ow6 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_2__m4c9ow1c style_undefined_compound_66__m4c9ow34"
                  style="--whiteSpace__qabug41: nowrap;"
                >
                  Hello
                </span>
              </div>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 22.340425531914892%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-2"
            >
              <span
                class="styles__1s3oplf8 style__m4c9ow0 style_prominence_stronger__m4c9ow6 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_2__m4c9ow1c style_undefined_compound_66__m4c9ow34"
                style="--whiteSpace__qabug41: nowrap;"
              />
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 22.340425531914892%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-3"
            >
              <span
                class="styles__1s3oplf8 style__m4c9ow0 style_prominence_stronger__m4c9ow6 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_2__m4c9ow1c style_undefined_compound_66__m4c9ow34"
                style="--whiteSpace__qabug41: nowrap;"
              >
                Encore
              </span>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 22.340425531914892%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-4"
            >
              <span
                class="styles__1s3oplf8 style__m4c9ow0 style_prominence_stronger__m4c9ow6 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_2__m4c9ow1c style_undefined_compound_66__m4c9ow34"
                style="--whiteSpace__qabug41: nowrap;"
              >
                Next
              </span>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 22.340425531914892%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-5"
            >
              <span
                class="styles__1s3oplf8 style__m4c9ow0 style_prominence_stronger__m4c9ow6 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_2__m4c9ow1c style_undefined_compound_66__m4c9ow34"
                style="--whiteSpace__qabug41: nowrap;"
              >
                Bye bye
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`barStack > should render correctly with event handlers 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
      style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
    >
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.125rem_xxsmall__toi52u5j styles_justifyContent_normal_xxsmall__toi52u5v"
        style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
      >
        <label
          class="styles_default__17td3g90 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
        />
        <div
          class="styles__1s3oplf9"
        >
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 100%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-1"
            >
              <span
                class="styles__1s3oplf8 style__m4c9ow0 style_prominence_stronger__m4c9ow6 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_2__m4c9ow1c style_undefined_compound_66__m4c9ow34"
                style="--whiteSpace__qabug41: nowrap;"
              >
                Hello
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`barStack > should render correctly with hovering legend 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
      style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
    >
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.125rem_xxsmall__toi52u5j styles_justifyContent_normal_xxsmall__toi52u5v"
        style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
      >
        <label
          class="styles_default__17td3g90 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
        />
        <div
          class="styles__1s3oplf9"
        >
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 100%;"
          >
            <div
              aria-controls="_r_3a_"
              aria-describedby="_r_3a_"
              class="styles__w40vpo9"
              tabindex="0"
            >
              <div
                aria-controls="tooltip-1"
                aria-describedby="tooltip-1"
                class="styles__w40vpo9"
                tabindex="0"
              >
                <div
                  class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
                  data-testid="content-1"
                >
                  <span
                    class="styles__1s3oplf8 style__m4c9ow0 style_prominence_stronger__m4c9ow6 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_2__m4c9ow1c style_undefined_compound_66__m4c9ow34"
                    style="--whiteSpace__qabug41: nowrap;"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_normal_xxsmall__toi52u5v"
        style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          data-testid="legend-1"
          style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
        >
          <span
            class="styles__1s3oplfb styles_child_0__1s3oplfc"
          />
          <span
            class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
          >
            Hello
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`barStack > should render correctly with label and label information 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
      style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
    >
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.125rem_xxsmall__toi52u5j styles_justifyContent_normal_xxsmall__toi52u5v"
        style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
      >
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_space-between_xxsmall__toi52u77"
          style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
        >
          <label
            class="styles_default__17td3g90 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
          >
            label
          </label>
          <span
            class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
          >
            label information
          </span>
        </div>
        <div
          class="classname styles__1s3oplf9"
        >
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 2%;"
          >
            <div
              aria-controls="tooltip-1"
              aria-describedby="tooltip-1"
              class="styles__w40vpo9"
              tabindex="0"
            >
              <div
                class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
                data-testid="content-1"
              >
                <span
                  class="styles__1s3oplf8 style__m4c9ow0 style_prominence_stronger__m4c9ow6 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_2__m4c9ow1c style_undefined_compound_66__m4c9ow34"
                  style="--whiteSpace__qabug41: nowrap;"
                >
                  Hello
                </span>
              </div>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 4.2%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-2"
            >
              <span
                class="styles__1s3oplf8 style__m4c9ow0 style_prominence_stronger__m4c9ow6 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_2__m4c9ow1c style_undefined_compound_66__m4c9ow34"
                style="--whiteSpace__qabug41: nowrap;"
              />
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 4.2%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-3"
            >
              <span
                class="styles__1s3oplf8 style__m4c9ow0 style_prominence_stronger__m4c9ow6 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_2__m4c9ow1c style_undefined_compound_66__m4c9ow34"
                style="--whiteSpace__qabug41: nowrap;"
              >
                Encore
              </span>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 4.2%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-4"
            >
              <span
                class="styles__1s3oplf8 style__m4c9ow0 style_prominence_stronger__m4c9ow6 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_2__m4c9ow1c style_undefined_compound_66__m4c9ow34"
                style="--whiteSpace__qabug41: nowrap;"
              >
                Next
              </span>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 4.2%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-5"
            >
              <span
                class="styles__1s3oplf8 style__m4c9ow0 style_prominence_stronger__m4c9ow6 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_2__m4c9ow1c style_undefined_compound_66__m4c9ow34"
                style="--whiteSpace__qabug41: nowrap;"
              >
                Bye bye
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`barStack > should render correctly with legend outside 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
      style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
    >
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.125rem_xxsmall__toi52u5j styles_justifyContent_normal_xxsmall__toi52u5v"
        style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
      >
        <label
          class="styles_default__17td3g90 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
        />
        <div
          class="styles__1s3oplf9"
        >
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 2%;"
          >
            <div
              aria-controls="_r_2m_"
              aria-describedby="_r_2m_"
              class="styles__w40vpo9"
              tabindex="0"
            >
              <div
                aria-controls="tooltip-1"
                aria-describedby="tooltip-1"
                class="styles__w40vpo9"
                tabindex="0"
              >
                <div
                  class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
                  data-testid="content-1"
                >
                  <span
                    class="styles__1s3oplf8 style__m4c9ow0 style_prominence_stronger__m4c9ow6 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_2__m4c9ow1c style_undefined_compound_66__m4c9ow34"
                    style="--whiteSpace__qabug41: nowrap;"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 4.2%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-2"
            >
              <span
                class="styles__1s3oplf8 style__m4c9ow0 style_prominence_stronger__m4c9ow6 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_2__m4c9ow1c style_undefined_compound_66__m4c9ow34"
                style="--whiteSpace__qabug41: nowrap;"
              />
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 4.2%;"
          >
            <div
              aria-controls="_r_2r_"
              aria-describedby="_r_2r_"
              class="styles__w40vpo9"
              tabindex="0"
            >
              <div
                class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
                data-testid="content-3"
              >
                <span
                  class="styles__1s3oplf8 style__m4c9ow0 style_prominence_stronger__m4c9ow6 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_2__m4c9ow1c style_undefined_compound_66__m4c9ow34"
                  style="--whiteSpace__qabug41: nowrap;"
                />
              </div>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 4.2%;"
          >
            <div
              aria-controls="_r_2t_"
              aria-describedby="_r_2t_"
              class="styles__w40vpo9"
              tabindex="0"
            >
              <div
                class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
                data-testid="content-4"
              >
                <span
                  class="styles__1s3oplf8 style__m4c9ow0 style_prominence_stronger__m4c9ow6 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_2__m4c9ow1c style_undefined_compound_66__m4c9ow34"
                  style="--whiteSpace__qabug41: nowrap;"
                />
              </div>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 4.2%;"
          >
            <div
              aria-controls="_r_2v_"
              aria-describedby="_r_2v_"
              class="styles__w40vpo9"
              tabindex="0"
            >
              <div
                class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
                data-testid="content-5"
              >
                <span
                  class="styles__1s3oplf8 style__m4c9ow0 style_prominence_stronger__m4c9ow6 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_2__m4c9ow1c style_undefined_compound_66__m4c9ow34"
                  style="--whiteSpace__qabug41: nowrap;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_normal_xxsmall__toi52u5v"
        style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          data-testid="legend-1"
          style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
        >
          <span
            class="styles__1s3oplfb styles_child_0__1s3oplfc"
          />
          <span
            class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
          >
            Hello
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          data-testid="legend-2"
          style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
        >
          <span
            class="styles__1s3oplfb styles_child_1__1s3oplfd"
          />
          <span
            class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
          />
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          data-testid="legend-3"
          style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
        >
          <span
            class="styles__1s3oplfb styles_child_2__1s3oplfe"
          />
          <span
            class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
          >
            Encore
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          data-testid="legend-4"
          style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
        >
          <span
            class="styles__1s3oplfb styles_child_3__1s3oplff"
          />
          <span
            class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
          >
            Next
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          data-testid="legend-5"
          style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
        >
          <span
            class="styles__1s3oplfb styles_child_4__1s3oplfg"
          />
          <span
            class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
          >
            Bye bye
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`barStack > should render correctly with total 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
      style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
    >
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.125rem_xxsmall__toi52u5j styles_justifyContent_normal_xxsmall__toi52u5v"
        style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
      >
        <label
          class="styles_default__17td3g90 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
        />
        <div
          class="styles__1s3oplf9"
        >
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 2%;"
          >
            <div
              aria-controls="tooltip-1"
              aria-describedby="tooltip-1"
              class="styles__w40vpo9"
              tabindex="0"
            >
              <div
                class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
                data-testid="content-1"
              >
                <span
                  class="styles__1s3oplf8 style__m4c9ow0 style_prominence_stronger__m4c9ow6 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_2__m4c9ow1c style_undefined_compound_66__m4c9ow34"
                  style="--whiteSpace__qabug41: nowrap;"
                >
                  Hello
                </span>
              </div>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 4.2%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-2"
            >
              <span
                class="styles__1s3oplf8 style__m4c9ow0 style_prominence_stronger__m4c9ow6 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_2__m4c9ow1c style_undefined_compound_66__m4c9ow34"
                style="--whiteSpace__qabug41: nowrap;"
              />
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 4.2%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-3"
            >
              <span
                class="styles__1s3oplf8 style__m4c9ow0 style_prominence_stronger__m4c9ow6 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_2__m4c9ow1c style_undefined_compound_66__m4c9ow34"
                style="--whiteSpace__qabug41: nowrap;"
              >
                Encore
              </span>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 4.2%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-4"
            >
              <span
                class="styles__1s3oplf8 style__m4c9ow0 style_prominence_stronger__m4c9ow6 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_2__m4c9ow1c style_undefined_compound_66__m4c9ow34"
                style="--whiteSpace__qabug41: nowrap;"
              >
                Next
              </span>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 4.2%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-5"
            >
              <span
                class="styles__1s3oplf8 style__m4c9ow0 style_prominence_stronger__m4c9ow6 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_2__m4c9ow1c style_undefined_compound_66__m4c9ow34"
                style="--whiteSpace__qabug41: nowrap;"
              >
                Bye bye
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
